--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="#"><img src="image/logo.png" alt="site logo" id="siteLogo"></a>
-        <h1><a href="#">Frictional News</a></h1>
+        <h1><a href="#">Fictional News</a></h1>
         <p><a href="#">Search 🔍</a></p>
         <p><a href="#">Sign in</a></p>
         <div id="nav-icon1">
